# dispensy

./: .gitmodules  README.md
.github/workflows/: cmake.yml  docs.yml  kicad.yml
docs/: .gitignore  README.md  book.toml  generate_docs.sh
docs/src/: SUMMARY.md  introduction.md  main_board.md  main_board_pcb.md  main_board_sch.md
docs/src/js/: 3d.js  modelview.js  svg-pan-zoom.js  svg-pan-zoom.min.js
firmware/: .clangd  CMakeLists.txt  README.md  debug.sh  debug_swd.sh  flash.sh  flash_swd.sh
firmware/include/: buttons.h  config.h  console.h  hw_id.h  lcd.h  log.h  main.h  ring.h  tusb_config.h  usb.h  usb_cdc.h  usb_descriptors.h  util.h
firmware/src/: buttons.c  console.c  hw_id.c  lcd.c  log.c  main.c  ring.c  usb.c  usb_cdc.c  usb_descriptors.c  util.c
hardware/: .gitignore  README.md  dispensy.kicad_pcb  dispensy.kicad_prl  dispensy.kicad_pro  dispensy.kicad_sch  fetch_jlc.sh  fp-lib-table  generate_fab.sh  generate_plot.sh  pi.kicad_sch  psu_lm2576.kicad_sch  sym-lib-table
hardware/jlc_lib/Schematic/: jlc_schematics.kicad_sym
hardware/jlc_lib/jlc_footprints/: C0402.kicad_mod  C0603.kicad_mod  CAP-SMD_BD10.0-L10.3-W10.3-FD.kicad_mod  CAP-SMD_BD10.0-L10.3-W10.3-LS11.3-FD.kicad_mod  HDR-TH_2P-P2.54-V-M-1.kicad_mod  HDR-TH_3P-P2.54-V-F.kicad_mod  HDR-TH_3P-P2.54-V-M.kicad_mod  HDR-TH_6P-P2.54-V-F.kicad_mod  IND-SMD_L11.5-W10.0_YSPI1050.kicad_mod  LED-SMD_4P-L5.0-W5.0-LS5.4-TL-1.kicad_mod  LQFN-56_L7.0-W7.0-P0.4-EP.kicad_mod  OSC-SMD_2P-L5.0-W3.2.kicad_mod  R0402.kicad_mod  R1206.kicad_mod  RJ45-TH_DS1129-05-S80BP-X.kicad_mod  SMA_L4.4-W2.8-LS5.4-R-RD.kicad_mod  SOD-123_L2.8-W1.8-LS3.7-RD.kicad_mod  SOIC-16_L9.9-W3.9-P1.27-LS6.0-BL.kicad_mod  SOIC-8_L5.0-W4.0-P1.27-LS6.0-BL.kicad_mod  SOIC-8_L5.3-W5.3-P1.27-LS8.0-BL.kicad_mod  SOT-223-3_L6.5-W3.4-P2.30-LS7.0-BR.kicad_mod  SW-SMD_L6.1-W3.6-LS6.6.kicad_mod  SW-SMD_SM_SKCR-16S.kicad_mod  TO-263-5_L10.6-W9.6-P1.70-LS15.9-BR.kicad_mod  USB-A-TH_USB-302-T.kicad_mod  USB-C-SMD_TYPE-C-USB-18.kicad_mod
hardware/jlc_lib/jlc_footprints/packages3d/: CAP-SMD_BD10.0-L10.3-W10.3-FD.wrl  HDR-TH_2P-P2.54-V-M-1.wrl  HDR-TH_3P-P2.54-V-F.wrl  IND-SMD_L11.5-W10.0_YSPI1050.wrl  LED-SMD_4P-L5.0-W5.0-LS5.4-TL-1.wrl  R1206.wrl  RJ45-TH_DS1129-05-S80BP-X.wrl  SW-SMD_L6.1-W3.6-LS6.6.wrl  USB-A-TH_USB-302-T.wrl
